# ByzML-GenBenefit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pytests_linting.yml
data/: .gitignore
results/CIFAR-10/: README.md
results/CIFAR-10/raw_data/: nodes_11_byz_0_batch_550_epochs_600_agg_CWMedAggregator_lr_0.1_seed_0.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWMedAggregator_lr_0.1_seed_1.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWMedAggregator_lr_0.1_seed_2.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWMedAggregator_lr_0.1_seed_3.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWMedAggregator_lr_0.1_seed_4.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWTMAggregator_lr_0.1_seed_0.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWTMAggregator_lr_0.1_seed_1.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWTMAggregator_lr_0.1_seed_2.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWTMAggregator_lr_0.1_seed_3.csv  nodes_11_byz_0_batch_550_epochs_600_agg_CWTMAggregator_lr_0.1_seed_4.csv  nodes_11_byz_0_batch_550_epochs_600_agg_GMAggregator_lr_0.1_seed_0.csv  (+299 more)
results/MNIST/: README.md  nodes_11_byz_0_batch_1100_epochs_600_agg_GMAggregator_lr_0.01_seed_0.csv  nodes_11_byz_3_batch_1100_epochs_600_agg_CWTMAggregator_lr_0.01_seed_0.csv  nodes_5_byz_0_batch_1100_epochs_300_agg_CWTMAggregator_lr_0.01_seed_0.csv  nodes_5_byz_1_batch_1100_epochs_300_agg_KrumAggregator_lr_0.01_seed_0.csv  nodes_5_byz_2_batch_1100_epochs_300_agg_CWTMAggregator_lr_0.01_seed_0.csv
src/: main.py  visu.py
src/byzml_genbenefit/: utils.py
tests/: test_empty.py
(+697 files in other folders)
