[tool.poetry]
name = "byzml-genbenefit"
version = "0.1.0"
description = ""
authors = ["Gavinkaa <ludovic.burnier@epfl.ch>"]
readme = "README.md"
packages = [{include = "byzml_genbenefit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
