[tool.poetry]
name = "byzml-genbenefit"
version = "0.1.0"
description = ""
authors = ["Gavinkaa <ludovic.burnier@epfl.ch>"]
readme = "README.md"
packages = [{include = "byzml_genbenefit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-report=term-missing",
]

pythonpath = [
    "src/",
    "tests/",
]

[tool.coverage.run]
omit = [
    "src/main.py",
]
